--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-html {background-color: #f5f5f5; }
+html {background-color: #f5f5f5; 
+calc(100% - 20px) 0px 0px 0px; /* Adjust the width to fit your layout */
+    padding: 10px;
+    box-sizing: border-box;
+    }
 p, ul {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 20px; color: #242323;} 
 .main-nav {padding: 10px; text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 .main-nav a {color: #242323; text-decoration: none; padding: 10px; font-weight: bold; font-size: 25px;}
