--- a/styles.css
+++ b/styles.css
@@ -451,9 +451,9 @@ footer {
   }
 }
  /* Gallery image styles */
-    /*.gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+   .gallery-grid {
+      display: grid;}
+      /*  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 20px;
       margin: 2rem, 2rem, 2rem;
       padding: 0 20px;
