--- a/styles.css
+++ b/styles.css
@@ -463,10 +463,11 @@ footer {
       width: 20%;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin: 2rem, 2rem, 2rem;
+      /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+      margin: 0;
       padding: 0 20px;
-      margin-left: 40px;
+      /*margin-left: 40px; */
+      transition: transform 0.3s ease;
     }
 
    ul {
