--- a/styles.css
+++ b/styles.css
@@ -486,3 +486,25 @@ p {
   margin-bottom: 1.5rem;
 }
 
+/* Wishlist table styles */
+.wishlist-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+   margin-bottom: 20px;
+  border: 1px solid #145353;
+}
+
+.wishlist-table th,
+.wishlist-table td {
+  border: 1px solid #145353;
+  padding: 10px;
+  text-align: left;
+}
+
+.wishlist-table thead {
+  background-color: #daf1f0;
+  color: #145353;
+}
+
+
